src/components/getTheApp/styles.module.css
.container {
    position: fixed;
    display: flex;
    justify-content: center;
    z-index: 99999;
    bottom: 0;
    left: 0;
    padding: 16px 24px;
    background-color: var(--color-white);
    background-color: var(--color-primary);
    width: 100%;
}

.container>a {
    width: 100%;
    max-width: unset;
}

@media (min-width: 1050px) {
    .container {
        display: none;
    }
}

